# bookmarks

./: README.md  cert.crt  cert.key  pyproject.toml
account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_contact.py
account/templates/account/: base.html  dashboard.html  edit.html  logged_out.html  login.html  register.html  register_done.html
account/templates/account/dashboard/: dashboard.html
account/templates/account/user/: detail.html  list.html
account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
actions/: admin.py  models.py  utils.py
actions/migrations/: 0001_initial.py
config/: settings.py  urls.py
images/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
images/templates/: bookmarklet_launcher.js
images/templates/images/image/: create.html  detail.html  list.html  list_images.html  ranking.html
