[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = "bookmarks"
authors = ["sudodebug <sudodebug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
pillow = "^9.5.0"
social-auth-app-django = "^5.2.0"
django-extensions = "^3.2.1"
werkzeug = "^2.3.4"
pyopenssl = "^23.2.0"
requests = "^2.31.0"
easy-thumbnails = "^2.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
